# useless-planner-backend

./: Makefile  Readme.md  alembic.ini  docker-compose.yaml  pyproject.toml
app/apps/internal/views/: health_check.py  router.py
app/apps/tasks/models/: tasks.py
app/apps/tasks/schemas/: tasks.py
app/apps/tasks/services/: tasks.py
app/apps/tasks/views/: __init__.py  router.py  tasks.py
app/core/: main.py  router.py  settings.py
app/core/integrations/database/: base.py  database.py
app/core/integrations/database/repositories/: base.py
app/core/integrations/database/servises/: base.py  sqlalchemy.py
migrations/: env.py
migrations/versions/: 001_create_task_table.py
